Panorama layers z-index correction

--- a/src/components/modules/panoPosition/css/styles.css
+++ b/src/components/modules/panoPosition/css/styles.css
@@ -18,6 +18,7 @@
     font-size: 12px;
     text-align: left;
     color: #fff;
+    z-index:1;
 }
 
 .pnlm-module-panoPosition .pnlm-title-box {
@@ -41,7 +42,8 @@
 		top:50%; left:50%;
 		width:31px; height:31px;
 		border:1px solid #000;
-		background-color: rgba(255, 255, 255, 0.44);
+		background-color: rgba(255, 251, 114, 0.44);
+    z-index:1;
 }
 
 .pnlm-module-panoPosition-pnlm-crossChar .vline {
